tests/cases/fail/parse_missing_colon.p4
def main() -> None
    print("x")
